--- a/LiberatorY5/NewUI.resx
+++ b/LiberatorY5/NewUI.resx
@@ -123,8 +123,7 @@ Supported versions:
 Y5S1.2.0.1_C5183038_D967006_S37789_14303219
 Y5S1.2.0.2_C5218952_D973190_S37789_14335319
 Y5S2.3.1.1pc_C5493616_D1043836_S38774_14664131
-Y5S3
-</value>
+Y5S3.3.1_C5789341_D1135607_S40332_15018155</value>
   </data>
   <metadata name="backgroundWorker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
