Networking to main(master) (#2)
* network added

* Network update

* Season Update to Network (#1)

* some updates

* Big Season changes.
It clearly works (Tested 1  time :D )

* network kinda done
Thx to tav again!

* big changes!
Now 2 season supported for network

* Added live tmp

* some addon

* Autostuff, fix smth
game change fixed. Added AutoConnect/AutoDisconnect, Auto stuffs..

* the exe

* Forgot add this

--- a/LiberatorY5/NewUI.resx
+++ b/LiberatorY5/NewUI.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label1.Text" xml:space="preserve">
+  <data name="supportLabel.Text" xml:space="preserve">
     <value>This tool is the liberator for year 5 of Siege. It does not support live version and it will never be.
 Supported versions:
 Y5S1.2.0.1_C5183038_D967006_S37789_14303219
@@ -128,6 +128,9 @@ Y5S4.2.0_C5914517_D1181197_S40892_15241382</value>
   </data>
   <metadata name="backgroundWorker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>174, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
