--- a/LiberatorY5/NewUI.resx
+++ b/LiberatorY5/NewUI.resx
@@ -118,11 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="supportLabel.Text" xml:space="preserve">
-    <value>This tool is the liberator for year 5 of Siege. It does not support live version and it will never be.
+    <value>This tool is the liberator for year 5-x of Siege. It does not support live version and it will never be.
 Supported versions:
 Y5S1.2.0.1_C5183038_D967006_S37789_14303219
 Y5S1.2.0.2_C5218952_D973190_S37789_14335319
-Y5S2.3.1.1pc_C5493616_D1043836_S38774_14664131 (Under Maintanance)
+Y5S2.3.1.1pc_C5493616_D1043836_S38774_14664131
 Y5S3.3.1_C5789341_D1135607_S40332_15018155
 Y5S4.2.0_C5914517_D1181197_S40892_15241382
 Semi Supported:
